--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - REDIS_PORT=6379
       - REDIS_PASSWORD=mysecretpassword
       - STOCK_URL=https://www.alphavantage.co/query
-      - API_KEY=HTIVUAD7WF9PTKAZ
+      - API_KEY=
 
 networks:
   default:
